--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.1.0",
     "dat.gui": "^0.7.7",
+    "gsap": "^3.7.1",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.9",
