--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.7.3"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
